--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Mário was here
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>João Mário - Index</title>
+</head>
+<body>
+    <h1>"M A R I O   W A S   H E R E</h1>
+</body>
+</html>
